fixed home page alignment

--- a/app/public/style.css
+++ b/app/public/style.css
@@ -113,7 +113,7 @@ h1 {
 {
     color:black;
     text-align: center;
-    margin:auto 30%;
+    margin:16px 30%;
 }
 
 #tabs {
@@ -205,7 +205,8 @@ h1 {
     border-radius: 8px;
 }
 #mainA {
-    margin: 16px;
+    justify-content: center;
+    margin: auto auto;
     display: flex;
     text-align: center;
 }
@@ -276,7 +277,7 @@ footer {
         width:90%;
     }
     #pageSummary{
-        margin: auto 5%;
+        margin: 16px 5%;
     }
     #navlogo {
         display: none;
@@ -355,6 +356,9 @@ footer {
     }
     #mainA {
         display: block;
+    }
+    #mainB article{
+        margin-bottom: 16px;
     }
     .centered{
         margin:auto 5%;
